--- a/L4/L4_1_1.ipynb
+++ b/L4/L4_1_1.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": " L4_1.ipynb",
+      "name": " L4_1",
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/aquapathos/Semi3B/blob/master/L4/L4_1_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/aquapathos/Semi3B/blob/master/L4/L4_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -80,6 +80,7 @@
       "metadata": {
         "id": "DUYxxZhIozLT",
         "colab_type": "code",
+        "outputId": "144a97cb-2523-43ba-f079-071589e27d7b",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -97,8 +98,7 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 429
-        },
-        "outputId": "144a97cb-2523-43ba-f079-071589e27d7b"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -110,7 +110,7 @@
         "img=cv2.imread('prof.jpg',-1)\n",
         "cv2_imshow(img)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -181,11 +181,11 @@
       "metadata": {
         "id": "S_gFrZRx-kiv",
         "colab_type": "code",
+        "outputId": "eda45b3e-0bee-4254-8470-939e886fcfc7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        },
-        "outputId": "281e0f04-61d9-4692-b795-4ec3912d55e9"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -195,21 +195,21 @@
         "file = \"prof.jpg\"\n",
         "img = cv2.imread(file,-1)\n",
         "plt.axis('off')\n",
-        "plt.imshow(cv2.cvtColor(img,cv2.COLOR_RGB2BGR))"
+        "plt.imshow(cv2.cvtColor(img,cv2.COLOR_BGR2RGB))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fe146a96160>"
+              "<matplotlib.image.AxesImage at 0x7f6ba0b53400>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 1
         },
         {
           "output_type": "display_data",
@@ -239,18 +239,18 @@
       "metadata": {
         "id": "WcU7R5ATAFFD",
         "colab_type": "code",
+        "outputId": "fc7f8eaa-3eff-4aeb-bee4-3e5dad34cacd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 375
-        },
-        "outputId": "fc7f8eaa-3eff-4aeb-bee4-3e5dad34cacd"
+        }
       },
       "cell_type": "code",
       "source": [
         "from IPython.display import Image,display_jpeg\n",
         "display_jpeg(Image('prof.jpg'))"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
