Colaboratory を使用して作成しました

--- a/noVNC.ipynb
+++ b/noVNC.ipynb
@@ -77,7 +77,11 @@
       "metadata": {
         "id": "wS3y0kByM55V",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 697
+        },
+        "outputId": "20f4c8cb-5c4b-457e-99d1-336c79b481b0"
       },
       "cell_type": "code",
       "source": [
@@ -154,31 +158,61 @@
         "rm ngrok-stable-linux-amd64.zip \n",
         "echo \"web_addr: 4045\" > /content/config.yml\n"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "j3pbC322Yw5F",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "# Ngrok"
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Selecting previously unselected package libjpeg-turbo-official.\n",
+            "(Reading database ... 131304 files and directories currently installed.)\n",
+            "Preparing to unpack libjpeg-turbo-official_2.0.0_amd64.deb ...\n",
+            "Unpacking libjpeg-turbo-official (2.0.0-20180727) ...\n",
+            "Selecting previously unselected package turbovnc.\n",
+            "Preparing to unpack turbovnc_2.2.1_amd64.deb ...\n",
+            "Unpacking turbovnc (2.2.1-20190102) ...\n",
+            "Selecting previously unselected package virtualgl.\n",
+            "Preparing to unpack virtualgl_2.6.1_amd64.deb ...\n",
+            "Unpacking virtualgl (2.6.1-20190411) ...\n",
+            "Setting up libjpeg-turbo-official (2.0.0-20180727) ...\n",
+            "Setting up turbovnc (2.2.1-20190102) ...\n",
+            "Setting up virtualgl (2.6.1-20190411) ...\n",
+            "Processing triggers for systemd (237-3ubuntu10.17) ...\n",
+            "Processing triggers for mime-support (3.60ubuntu1) ...\n",
+            "Get:1 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "Hit:2 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "Hit:3 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "Get:4 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "Get:5 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic InRelease [15.4 kB]\n",
+            "Get:6 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [74.6 kB]\n",
+            "Get:7 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/ InRelease [3,609 B]\n",
+            "Ign:8 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "Ign:9 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:10 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  Release\n",
+            "Hit:11 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Get:12 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic/main Sources [1,633 kB]\n",
+            "Get:13 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [163 kB]\n",
+            "Get:14 http://security.ubuntu.com/ubuntu bionic-security/multiverse amd64 Packages [3,915 B]\n",
+            "Get:15 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [377 kB]\n",
+            "Get:16 http://ppa.launchpad.net/marutter/c2d4u3.5/ubuntu bionic/main amd64 Packages [784 kB]\n",
+            "Get:17 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [747 kB]\n",
+            "Get:18 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [967 kB]\n",
+            "Get:19 http://archive.ubuntu.com/ubuntu bionic-updates/multiverse amd64 Packages [6,968 B]\n",
+            "Get:20 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/ Packages [60.4 kB]\n",
+            "Fetched 5,015 kB in 2s (2,527 kB/s)\n",
+            "Reading package lists...\n",
+            "Archive:  ngrok-stable-linux-amd64.zip\n",
+            "  inflating: /opt/ngrok              \n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "rm: cannot remove '/opt/ngrok': No such file or directory\n"
+          ],
+          "name": "stderr"
+        }
       ]
-    },
-    {
-      "metadata": {
-        "id": "lfqL-7q9Yv39",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "metadata": {
@@ -194,7 +228,11 @@
       "metadata": {
         "id": "lLanG356Nyj3",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "eeaae395-6565-42be-9485-47225d68b0db"
       },
       "cell_type": "code",
       "source": [
@@ -213,12 +251,20 @@
         "get_ipython().system_raw('/opt/ngrok http -config=/content/config.yml 5901 &')\n",
         "! sleep 1\n",
         "get_ipython().system_raw('DISPLAY=:1 openbox &')\n",
-        "\n",
+        "get_ipython().system_raw('DISPLAY=:1 jupyter notebook &')\n",
         "get_ipython().system_raw('DISPLAY=:1 xterm &')\n",
-        "get_ipython().system_raw('DISPLAY=:1 epiphany http://google.com &')"
+        "get_ipython().system_raw('DISPLAY=:1 epiphany http://localhost:8888 &')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "kill: usage: kill [-s sigspec | -n signum | -sigspec] pid | jobspec ... or kill -l [sigspec]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -235,7 +281,11 @@
       "metadata": {
         "id": "bOjxfHN1YRTE",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "004c4fc3-a600-4613-e498-856e95455df9"
       },
       "cell_type": "code",
       "source": [
@@ -246,21 +296,17 @@
         "r = requests.get(\"http://localhost:4045/api/tunnels\", headers={\"content-type\": \"application/json\"})\n",
         "print(r.json()['tunnels'][0]['public_url'])"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "_SrZprxXPkiG",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Full control one-time password: 33545121\n",
+            "http://483a2b80.ngrok.io\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
