Colaboratory を使用して作成しました

--- a/noVNC2.ipynb
+++ b/noVNC2.ipynb
@@ -113,8 +113,8 @@
       "metadata": {
         "id": "7SwnsECweSJ_",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "both"
+        "cellView": "both",
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -149,16 +149,6 @@
     },
     {
       "metadata": {
-        "id": "_biy2AuxTwF2",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        ""
-      ]
-    },
-    {
-      "metadata": {
         "id": "MKgXoOiFOXtC",
         "colab_type": "text"
       },
@@ -189,45 +179,6 @@
       "cell_type": "code",
       "source": [
         "!curl -fsSL -O https://gist.githubusercontent.com/aquapathos/e7bb81a3bdd1a97f9337df4bc493a15a/raw/67cee05076de1552bb5bcce315e4dd503b06ba0a/Fake+Painter.ipynb"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "P54Ezc_fSxTS",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "jpg9REX3GCB-",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "get_ipython().system_raw('DISPLAY=:1 xterm &')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "A8mZAWF5vzhL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
       ],
       "execution_count": 0,
       "outputs": []
